deploy/k8s/twitter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twitter
  template:
    metadata:
      labels:
        app: twitter
    spec:
      containers:
        - name: twitter
          image: twitter:1.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: twitter
spec:
  selector:
    app: twitter
  ports:
    - port: 80
      targetPort: 8082
