deploy/k8s/ums.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ums
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ums
  template:
    metadata:
      labels:
        app: ums
    spec:
      containers:
        - name: ums
          image: ums:1.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ums
spec:
  selector:
    app: ums
  ports:
    - port: 80
      targetPort: 8081
